# BillSplitter

./: BillSplitter  CMakeLists.txt  README.md  data.json  main.cpp  mainwindow.cpp  mainwindow.h
